Clean up and fix some layout issues with resume.html

--- a/_styles/main.less
+++ b/_styles/main.less
@@ -64,6 +64,7 @@ header {
 }
 
 footer {
+	clear: both;
 	border-bottom-left-radius: @hf-border-radius;
 	border-bottom-right-radius: @hf-border-radius;
 }
